--- a/C#/Listy/Views/Shared/_Layout.cshtml
+++ b/C#/Listy/Views/Shared/_Layout.cshtml
@@ -10,6 +10,8 @@
 	<script src="http://jquery-ui.googlecode.com/svn/tags/latest/external/jquery.bgiframe-2.1.2.js" type="text/javascript"></script>
 	<script src="http://jquery-ui.googlecode.com/svn/tags/latest/ui/minified/i18n/jquery-ui-i18n.min.js" type="text/javascript"></script>
 	<script src="@Url.Content("~/Content/jquery.jqtubeutil.min.js")" type="text/javascript"></script>
+	<link href="@Url.Content("~/Content/bootstrap/bootstrap/css/bootstrap.min.css")" rel="stylesheet" type="text/css" />
+	<link href="@Url.Content("~/Content/bootstrap/bootstrap/css/bootstrap-responsive.min.css")" rel="stylesheet" type="text/css" />
 	<style type="text/css">
 		* { font-size: 9px; font-family: "lucida grande" ,tahoma,verdana,arial,sans-serif; }
 		#sortable { list-style-type: none; margin: 0; padding: 0; width: 500px; }
