clean up styles

--- a/C#/Listy/Views/Lists/index.cshtml
+++ b/C#/Listy/Views/Lists/index.cshtml
@@ -98,7 +98,7 @@
 				url: "/lists/create",
 				data: JSON.stringify(x),
 				success: function (data) {
-					alert(JSON.stringify(data));
+					//alert(JSON.stringify(data));
 				}
 			});
 
