--- a/C#/Listy/Views/Shared/_Layout.cshtml
+++ b/C#/Listy/Views/Shared/_Layout.cshtml
@@ -24,10 +24,12 @@
 		#add { margin: 20px 0 0 3px; }
 		li.ui-state-default { padding-right: 10px; }
 		.video { float: right; }
-		.song { font-size: 18px; margin-left: 10px; }
+		
 		.artist { color: gray; margin-left: 10px; }
 		.remove { float: left; margin-left: -7px; font-weight: bold; cursor: pointer; }
 		.btn { cursor: pointer; }
+		.song {display: inline-block;font-size: 18px; margin:8px 0 0 10px;}
+		.count { display: inline-block;font-size: 18px; margin:8px 0 0 10px;}
 	</style>
 </head>
 <body>
